#862kfpr66: Bug fix: when EnableSelection is enabled, the list has a scrollbar

--- a/ShiftBlazor/wwwroot/main.css
+++ b/ShiftBlazor/wwwroot/main.css
@@ -40,3 +40,7 @@
 .button-column-button:hover {
     text-decoration: underline;
 }
+
+.mud-table-container {
+    padding-bottom: 6px;
+}
